# multi_tap_delay_plugin

./: .gitignore  CLAP_VALIDATOR_FINDINGS.md  Cargo.toml  MANUAL_TEST_CHECKLIST.md  PLAN.md  README.md  design_document.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/delay-core/: Cargo.toml
crates/delay-core/examples/: bench.rs
crates/delay-core/src/: buffer.rs  curves.rs  engine.rs  lane.rs  lib.rs  limiter.rs  pan.rs  smoothing.rs
crates/delay-plugin/: Cargo.toml
crates/delay-plugin/src/: editor.rs  lib.rs  params.rs
scripts/: bundle-flatpak.sh  validate-clap.sh
xtask/: Cargo.toml
