[package]
name = "delay-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-tap delay — CLAP/VST3 plugin wrapper (nih-plug)."
homepage = "https://github.com/derekjohnsonva/delay_plugin"

[lib]
# `cdylib` for the actual plugin binary; `lib` so the nih_export_* macros work.
crate-type = ["cdylib", "lib"]

[dependencies]
delay-core = { path = "../delay-core" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "f36931f7af4646065488a9845d8f8c2f95252c23" }
